Re-config docker

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,10 +1,25 @@
 version: '3'
 services:
-  rails:
+  web:
     build: .
     command: rails s -b 0.0.0.0
-    container_name: meu_projeto_rails
+    container_name: rental_cars
     ports:
       - 3000:3000
     volumes:
       - .:/opt/app
+    environment: 
+      - POSTGRES_USER=postgres
+      - POSTGRES_PASSWORD=postgres
+      - POSTGRES_HOST=db
+    links:
+      - db
+  db:
+    image: postgres:12-alpine
+    environment:
+      - POSTGRES_USER=postgres
+      - POSTGRES_PASSWORD=postgres
+    volumes:
+      - rental_cars_data:/var/lib/postgresql/data
+volumes:
+  rental_cars_data:
