--- a/package.json
+++ b/package.json
@@ -2,14 +2,14 @@
   "name": "rental_cars",
   "private": true,
   "dependencies": {
-    "@rails/actioncable": "^6.0.0",
-    "@rails/activestorage": "^6.0.0",
-    "@rails/ujs": "^6.0.0",
-    "@rails/webpacker": "^5.1.1",
+    "@rails/actioncable": "^7.0.3-1",
+    "@rails/activestorage": "^7.0.3-1",
+    "@rails/ujs": "^7.0.3-1",
+    "@rails/webpacker": "^5.4.3",
     "turbolinks": "^5.2.0"
   },
   "version": "0.1.0",
   "devDependencies": {
-    "webpack-dev-server": "^3.10.3"
+    "webpack-dev-server": "^4.10.0"
   }
 }
